--- a/EditTextFile/EditTextFile.csproj
+++ b/EditTextFile/EditTextFile.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6D09011B-1F04-4D79-BDFC-164B409F7D2F}</ProjectGuid>
+    <ProjectGuid>{D0B5F9B0-CDCE-4B87-BBEA-BD71D097FC23}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SearchOfFile</RootNamespace>
-    <AssemblyName>SearchOfFile</AssemblyName>
+    <RootNamespace>EditTextFile</RootNamespace>
+    <AssemblyName>EditTextFile</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,22 +45,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SearchOfFileForm.cs">
+    <Compile Include="EditTextForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SearchOfFileForm.Designer.cs">
-      <DependentUpon>SearchOfFileForm.cs</DependentUpon>
+    <Compile Include="EditTextForm.Designer.cs">
+      <DependentUpon>EditTextForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LoadFileForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoadFileForm.Designer.cs">
+      <DependentUpon>LoadFileForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectFolderForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SelectFolderForm.Designer.cs">
-      <DependentUpon>SelectFolderForm.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="SearchOfFileForm.resx">
-      <DependentUpon>SearchOfFileForm.cs</DependentUpon>
+    <EmbeddedResource Include="EditTextForm.resx">
+      <DependentUpon>EditTextForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoadFileForm.resx">
+      <DependentUpon>LoadFileForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -71,9 +74,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SelectFolderForm.resx">
-      <DependentUpon>SelectFolderForm.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
